vendor/structopt-0.3.21/tests/ui/parse_literal_spec.stderr
error: parser specification must start with identifier
  --> $DIR/parse_literal_spec.rs:14:23
   |
14 |     #[structopt(parse("from_str"))]
   |                       ^^^^^^^^^^
